[package]
name = "forum-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
ureq = "2.10"
